@@ -58,8 +58,14 @@ public class CreateEdgesStep extends AbstractExecutionStep {
 
   private boolean initiated = false;
 
-  public CreateEdgesStep(final Identifier targetClass, final Identifier targetBucketName, final String uniqueIndex,
-      final Identifier fromAlias, final Identifier toAlias, final boolean unidirectional, final boolean ifNotExists,
+  public CreateEdgesStep(
+      final Identifier targetClass,
+      final Identifier targetBucketName,
+      final String uniqueIndex,
+      final Identifier fromAlias,
+      final Identifier toAlias,
+      final boolean unidirectional,
+      final boolean ifNotExists,
       final CommandContext context) {
     super(context);
     this.targetClass = targetClass;
@@ -91,8 +97,15 @@ public class CreateEdgesStep extends AbstractExecutionStep {
 
       @Override
       public Result next(final Object[] properties) {
-        if (currentTo == null)
+        if (currentTo == null) {
           loadNextFromTo();
+          if(edgeToUpdate != null && !ifNotExists) {
+            System.out.println("edgeToUpdate = " + edgeToUpdate);
+            currentTo = null;
+            currentBatch++;
+            return new UpdatableResult(edgeToUpdate);
+          }
+        }
 
         final long begin = context.isProfiling() ? System.nanoTime() : 0;
         try {
@@ -103,11 +116,21 @@ public class CreateEdgesStep extends AbstractExecutionStep {
           if (currentTo == null)
             throw new CommandExecutionException("Invalid TO vertex for edge");
 
-          if (ifNotExists)
+          if (ifNotExists) {
             if (context.getDatabase().getGraphEngine()
-                .isVertexConnectedTo((VertexInternal) currentFrom, currentTo, Vertex.DIRECTION.OUT, targetClass.getStringValue()))
-              // SKIP CREATING EDGE
-              return null;
+                .isVertexConnectedTo((VertexInternal) currentFrom, currentTo, Vertex.DIRECTION.OUT, targetClass.getStringValue())) {
+
+              for (Edge existingEdge : context.getDatabase().getGraphEngine()
+                  .getEdges((VertexInternal) currentFrom, Vertex.DIRECTION.OUT, targetClass.getStringValue())) {
+
+                if (existingEdge.getIn().equals(currentTo)) {
+                  currentTo = null;
+                  currentBatch++;
+                  return new UpdatableResult(existingEdge.modify());
+                }
+              }
+            }
+          }
 
           final String target = targetBucket != null ? "bucket:" + targetBucket.getStringValue() : targetClass.getStringValue();
 
@@ -119,7 +142,7 @@ public class CreateEdgesStep extends AbstractExecutionStep {
           currentBatch++;
           return result;
         } finally {
-          if( context.isProfiling() ) {
+          if (context.isProfiling()) {
             cost += (System.nanoTime() - begin);
           }
         }
@@ -135,36 +158,36 @@ public class CreateEdgesStep extends AbstractExecutionStep {
       initiated = true;
     }
     Object fromValues = context.getVariable(fromAlias.getStringValue());
-    if (fromValues instanceof Iterable && !(fromValues instanceof Identifiable))
-      fromValues = ((Iterable) fromValues).iterator();
+    if (fromValues instanceof Iterable iterable && !(fromValues instanceof Identifiable))
+      fromValues = iterable.iterator();
     else if (!(fromValues instanceof Iterator))
-      fromValues = Collections.singleton(fromValues).iterator();
+      fromValues = Set.of(fromValues).iterator();
 
-    if (fromValues instanceof InternalResultSet)
-      fromValues = ((InternalResultSet) fromValues).copy();
+    if (fromValues instanceof InternalResultSet set)
+      fromValues = set.copy();
 
     Object toValues = context.getVariable(toAlias.getStringValue());
-    if (toValues instanceof Iterable && !(toValues instanceof Identifiable))
-      toValues = ((Iterable) toValues).iterator();
+    if (toValues instanceof Iterable iterable && !(toValues instanceof Identifiable))
+      toValues = iterable.iterator();
     else if (!(toValues instanceof Iterator))
-      toValues = Collections.singleton(toValues).iterator();
+      toValues = Set.of(toValues).iterator();
 
-    if (toValues instanceof InternalResultSet)
-      toValues = ((InternalResultSet) toValues).copy();
+    if (toValues instanceof InternalResultSet set)
+      toValues = set.copy();
 
     fromIter = (Iterator) fromValues;
-    if (fromIter instanceof ResultSet) {
+    if (fromIter instanceof ResultSet set) {
       try {
-        ((ResultSet) fromIter).reset();
+        set.reset();
       } catch (final Exception ignore) {
       }
     }
 
     final Iterator toIter = (Iterator) toValues;
 
-    if (toIter instanceof ResultSet) {
+    if (toIter instanceof ResultSet set) {
       try {
-        ((ResultSet) toIter).reset();
+        set.reset();
       } catch (final Exception ignore) {
       }
     }
@@ -223,7 +246,7 @@ public class CreateEdgesStep extends AbstractExecutionStep {
         this.currentTo = null;
       }
     } finally {
-      if( context.isProfiling() ) {
+      if (context.isProfiling()) {
         cost += (System.nanoTime() - begin);
       }
     }
@@ -244,19 +267,19 @@ public class CreateEdgesStep extends AbstractExecutionStep {
   }
 
   private Vertex asVertex(Object currentFrom) {
-    if (currentFrom instanceof RID)
-      currentFrom = ((RID) currentFrom).getRecord();
+    if (currentFrom instanceof RID iD)
+      currentFrom = iD.getRecord();
 
-    if (currentFrom instanceof Result) {
+    if (currentFrom instanceof Result result) {
       final Object from = currentFrom;
-      currentFrom = ((Result) currentFrom).getVertex()
+      currentFrom = result.getVertex()
           .orElseThrow(() -> new CommandExecutionException("Invalid vertex for edge creation: " + from));
     }
 
-    if (currentFrom instanceof Vertex)
-      return (Vertex) currentFrom;
-    else if (currentFrom instanceof Document)
-      return ((Document) currentFrom).asVertex();
+    if (currentFrom instanceof Vertex vertex)
+      return vertex;
+    else if (currentFrom instanceof Document document)
+      return document.asVertex();
     else if (RID.is(currentFrom))
       return new RID(getContext().getDatabase(), currentFrom.toString()).asVertex();
 
@@ -271,7 +294,7 @@ public class CreateEdgesStep extends AbstractExecutionStep {
     result += spaces + "    FOR EACH y in " + toAlias + "\n";
     result +=
         spaces + "       CREATE EDGE " + targetClass + " FROM x TO y " + (unidirectional ? "UNIDIRECTIONAL" : "BIDIRECTIONAL");
-    if ( context.isProfiling() )
+    if (context.isProfiling())
       result += " (" + getCostFormatted() + ")";
 
     if (targetBucket != null)
@@ -287,8 +310,14 @@ public class CreateEdgesStep extends AbstractExecutionStep {
 
   @Override
   public ExecutionStep copy(final CommandContext context) {
-    return new CreateEdgesStep(targetClass == null ? null : targetClass.copy(), targetBucket == null ? null : targetBucket.copy(),
-        uniqueIndexName, fromAlias == null ? null : fromAlias.copy(), toAlias == null ? null : toAlias.copy(), unidirectional,
-        ifNotExists, context);
+    return new CreateEdgesStep(
+        targetClass == null ? null : targetClass.copy(),
+        targetBucket == null ? null : targetBucket.copy(),
+        uniqueIndexName,
+        fromAlias == null ? null : fromAlias.copy(),
+        toAlias == null ? null : toAlias.copy(),
+        unidirectional,
+        ifNotExists,
+        context);
   }
 }
