@@ -21,7 +21,9 @@ package com.arcadedb.query.sql.executor;
 import com.arcadedb.exception.TimeoutException;
 import com.arcadedb.query.sql.parser.LocalResultSet;
 
-import java.util.*;
+import java.util.Iterator;
+import java.util.NoSuchElementException;
+import java.util.Set;
 
 /**
  * Created by luigidellaquila on 20/09/16.
@@ -116,10 +118,10 @@ public class MatchFirstStep extends AbstractExecutionStep {
 
   private void initFromPrefetch(final Object matchedNodes) {
     final Iterable possibleResults;
-    if (matchedNodes instanceof Iterable) {
-      possibleResults = (Iterable) matchedNodes;
+    if (matchedNodes instanceof Iterable iterable) {
+      possibleResults = iterable;
     } else {
-      possibleResults = Collections.singleton(matchedNodes);
+      possibleResults = Set.of(matchedNodes);
     }
     iterator = possibleResults.iterator();
   }
