@@ -40,7 +40,8 @@ import com.arcadedb.query.sql.parser.WhereClause;
 import com.arcadedb.schema.DocumentType;
 import com.arcadedb.schema.LocalDocumentType;
 
-import java.util.*;
+import java.util.ArrayList;
+import java.util.List;
 import java.util.stream.*;
 
 /**
@@ -108,7 +109,7 @@ public class TraverseExecutionPlanner {
     } else if (target.getIdentifier() != null) {
       handleClassAsTarget(result, this.target, context);
     } else if (target.getBucket() != null) {
-      handleClustersAsTarget(result, Collections.singletonList(target.getBucket()), context);
+      handleClustersAsTarget(result, List.of(target.getBucket()), context);
     } else if (target.getBucketList() != null) {
       handleClustersAsTarget(result, target.getBucketList().toListOfClusters(), context);
     } else if (target.getStatement() != null) {
@@ -133,26 +134,26 @@ public class TraverseExecutionPlanner {
       final CommandContext context) {
     Object paramValue = inputParam.getValue(context.getInputParameters());
 
-    if (paramValue instanceof String && RID.is(paramValue))
-      paramValue = new RID(context.getDatabase(), (String) paramValue);
+    if (paramValue instanceof String string && RID.is(paramValue))
+      paramValue = new RID(context.getDatabase(), string);
 
     if (paramValue == null) {
       result.chain(new EmptyStep(context));//nothing to return
-    } else if (paramValue instanceof LocalDocumentType) {
+    } else if (paramValue instanceof LocalDocumentType type) {
       final FromClause from = new FromClause(-1);
       final FromItem item = new FromItem(-1);
       from.setItem(item);
-      item.setIdentifier(new Identifier(((DocumentType) paramValue).getName()));
+      item.setIdentifier(new Identifier(type.getName()));
       handleClassAsTarget(result, from, context);
-    } else if (paramValue instanceof String) {
+    } else if (paramValue instanceof String string) {
       //strings are treated as classes
       final FromClause from = new FromClause(-1);
       final FromItem item = new FromItem(-1);
       from.setItem(item);
-      item.setIdentifier(new Identifier((String) paramValue));
+      item.setIdentifier(new Identifier(string));
       handleClassAsTarget(result, from, context);
-    } else if (paramValue instanceof Identifiable) {
-      final RID orid = ((Identifiable) paramValue).getIdentity();
+    } else if (paramValue instanceof Identifiable identifiable) {
+      final RID orid = identifiable.getIdentity();
       final Rid rid = new Rid(-1);
       final PInteger bucket = new PInteger(-1);
       bucket.setValue(orid.getBucketId());
@@ -162,11 +163,11 @@ public class TraverseExecutionPlanner {
       rid.setBucket(bucket);
       rid.setPosition(position);
 
-      handleRidsAsTarget(result, Collections.singletonList(rid), context);
-    } else if (paramValue instanceof Iterable) {
+      handleRidsAsTarget(result, List.of(rid), context);
+    } else if (paramValue instanceof Iterable iterable) {
       //try list of RIDs
       final List<Rid> rids = new ArrayList<>();
-      for (final Object x : (Iterable) paramValue) {
+      for (final Object x : iterable) {
         if (!(x instanceof Identifiable)) {
           throw new CommandExecutionException("Cannot use collection as target: " + paramValue);
         }
