@@ -27,12 +27,7 @@ import com.arcadedb.query.sql.executor.MultiValue;
 import com.arcadedb.query.sql.executor.Result;
 import com.arcadedb.query.sql.executor.ResultInternal;
 
-import java.util.ArrayList;
-import java.util.Collection;
-import java.util.Collections;
-import java.util.Iterator;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 
 public class ContainsAnyCondition extends BooleanExpression {
   protected Expression left;
@@ -44,26 +39,26 @@ public class ContainsAnyCondition extends BooleanExpression {
   }
 
   public boolean execute(Object left, Object right) {
-    if (left instanceof Collection) {
-      if (right instanceof Iterable)
-        right = ((Iterable<?>) right).iterator();
+    if (left instanceof Collection<?> collection) {
+      if (right instanceof Iterable<?> iterable)
+        right = iterable.iterator();
 
       if (right instanceof Iterator<?> iterator) {
         while (iterator.hasNext()) {
           final Object next = iterator.next();
-          if (((Collection<?>) left).contains(next))
+          if (collection.contains(next))
             return true;
         }
       }
-      return ((Collection<?>) left).contains(right);
+      return collection.contains(right);
     }
 
-    if (left instanceof Iterable)
-      left = ((Iterable<?>) left).iterator();
+    if (left instanceof Iterable<?> iterable)
+      left = iterable.iterator();
 
     if (left instanceof Iterator<?> leftIterator) {
       if (!(right instanceof Iterable))
-        right = Collections.singleton(right);
+        right = Set.of(right);
 
       right = ((Iterable<?>) right).iterator();
 
@@ -93,11 +88,11 @@ public class ContainsAnyCondition extends BooleanExpression {
       final Iterator<?> iter = MultiValue.getMultiValueIterator(leftValue);
       while (iter.hasNext()) {
         final Object item = iter.next();
-        if (item instanceof Identifiable) {
-          if (!rightBlock.evaluate((Identifiable) item, context))
+        if (item instanceof Identifiable identifiable) {
+          if (!rightBlock.evaluate(identifiable, context))
             return false;
-        } else if (item instanceof Result) {
-          if (!rightBlock.evaluate((Result) item, context))
+        } else if (item instanceof Result result) {
+          if (!rightBlock.evaluate(result, context))
             return false;
         } else if (!rightBlock.evaluate(new ResultInternal(item), context))
           return false;
@@ -119,11 +114,11 @@ public class ContainsAnyCondition extends BooleanExpression {
       final Iterator<?> iter = MultiValue.getMultiValueIterator(leftValue);
       while (iter.hasNext()) {
         final Object item = iter.next();
-        if (item instanceof Identifiable) {
-          if (!rightBlock.evaluate((Identifiable) item, context))
+        if (item instanceof Identifiable identifiable) {
+          if (!rightBlock.evaluate(identifiable, context))
             return false;
-        } else if (item instanceof Result) {
-          if (!rightBlock.evaluate((Result) item, context))
+        } else if (item instanceof Result result) {
+          if (!rightBlock.evaluate(result, context))
             return false;
         } else if (!rightBlock.evaluate(new ResultInternal(item), context))
           return false;
