@@ -22,7 +22,9 @@ import com.arcadedb.TestHelper;
 import com.arcadedb.database.RID;
 import org.junit.jupiter.api.Test;
 
-import java.util.*;
+import java.util.ArrayList;
+import java.util.List;
+import java.util.Set;
 
 /**
  * Created by luigidellaquila on 26/07/16.
@@ -35,8 +37,8 @@ public class ParallelExecStepTest {
       final CommandContext ctx = new BasicCommandContext();
       final List<InternalExecutionPlan> subPlans = new ArrayList<>();
       for (int i = 0; i < 4; i++) {
-        final FetchFromRidsStep step0 = new FetchFromRidsStep(Collections.singleton(new RID(db, 12, i)), ctx);
-        final FetchFromRidsStep step1 = new FetchFromRidsStep(Collections.singleton(new RID(db, 12, i)), ctx);
+        final FetchFromRidsStep step0 = new FetchFromRidsStep(Set.of(new RID(db, 12, i)), ctx);
+        final FetchFromRidsStep step1 = new FetchFromRidsStep(Set.of(new RID(db, 12, i)), ctx);
         final InternalExecutionPlan plan = new SelectExecutionPlan(ctx);
         plan.getSteps().add(step0);
         plan.getSteps().add(step1);
@@ -46,9 +48,9 @@ public class ParallelExecStepTest {
       final ParallelExecStep step = new ParallelExecStep(subPlans, ctx);
 
       final SelectExecutionPlan plan = new SelectExecutionPlan(ctx);
-      plan.getSteps().add(new FetchFromRidsStep(Collections.singleton(new RID(db, 12, 100)), ctx));
+      plan.getSteps().add(new FetchFromRidsStep(Set.of(new RID(db, 12, 100)), ctx));
       plan.getSteps().add(step);
-      plan.getSteps().add(new FetchFromRidsStep(Collections.singleton(new RID(db, 12, 100)), ctx));
+      plan.getSteps().add(new FetchFromRidsStep(Set.of(new RID(db, 12, 100)), ctx));
     });
   }
 }
